Release version 2.0.3 1. Fixed Vercel page routing error 2. Removed scrollbars from mobile 3. Fixed language group h3 positioning 4. Added touch/click feedback for reset theme color button and theme color selection buttons 5. Changed input type of color-input-manual to number 6. Added color-input-row on mobile 7. Fixed like-overlay on mobile and expanded its area 8. Updated iframe and related elements' styles on mobile 9. Minor cosmetic changes to fandom-input field, download liked articles button, and chat input field on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -103,6 +103,10 @@ body.custom-cursor-enabled
 }
 
 @media only screen and (max-width: 900px) {
+  *::-webkit-scrollbar {
+    display: none;
+  }
+
   a:hover {
     opacity: 1 !important;
   }
